Fixed an issue causing the viewShow state not to be visible

--- a/wp-content/plugins/bidx-plugin/apps/businesssummary/static/less/businesssummary.less
+++ b/wp-content/plugins/bidx-plugin/apps/businesssummary/static/less/businesssummary.less
@@ -52,10 +52,6 @@
     {
         display: block;
     }
-    .viewEdit
-    {
-        display: none;
-    }
     .financialSummary
     {
         a.disabled
